--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -129,6 +129,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="MaskedOcclusionCulling\CullingThreadpool.h" />
+    <ClInclude Include="MaskedOcclusionCulling\MaskedOcclusionCulling.h" />
     <ClInclude Include="src\patches\rendering\d3d11_proxy.h" />
     <ClInclude Include="src\patches\rendering\GpuCircularBuffer.h" />
     <ClInclude Include="src\patches\rendering\GpuTimer.h" />
@@ -154,10 +156,8 @@
     <ClInclude Include="src\patches\TES\BSBatchRenderer.h" />
     <ClInclude Include="src\patches\TES\BSGraphicsRenderer.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSComputeShader.h" />
-    <ClInclude Include="src\patches\TES\BSShader\BSPixelShader.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSShaderMaterial.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSShaderUtil.h" />
-    <ClInclude Include="src\patches\TES\BSShader\BSVertexShader.h" />
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSBloodSplatterShader.h" />
     <ClInclude Include="src\patches\TES\BSGraphicsRenderTargetManager.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSShader.h" />
@@ -221,35 +221,44 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="jemalloc\arena.c" />
-    <ClCompile Include="jemalloc\atomic.c" />
+    <ClCompile Include="jemalloc\background_thread.c" />
     <ClCompile Include="jemalloc\base.c" />
+    <ClCompile Include="jemalloc\bin.c" />
     <ClCompile Include="jemalloc\bitmap.c" />
-    <ClCompile Include="jemalloc\chunk.c" />
-    <ClCompile Include="jemalloc\chunk_dss.c" />
-    <ClCompile Include="jemalloc\chunk_mmap.c" />
     <ClCompile Include="jemalloc\ckh.c" />
     <ClCompile Include="jemalloc\ctl.c" />
+    <ClCompile Include="jemalloc\div.c" />
     <ClCompile Include="jemalloc\extent.c" />
+    <ClCompile Include="jemalloc\extent_dss.c" />
+    <ClCompile Include="jemalloc\extent_mmap.c" />
     <ClCompile Include="jemalloc\hash.c" />
-    <ClCompile Include="jemalloc\huge.c" />
+    <ClCompile Include="jemalloc\hooks.c" />
     <ClCompile Include="jemalloc\jemalloc.c" />
-    <ClCompile Include="jemalloc\mb.c" />
+    <ClCompile Include="jemalloc\large.c" />
+    <ClCompile Include="jemalloc\log.c" />
+    <ClCompile Include="jemalloc\malloc_io.c" />
     <ClCompile Include="jemalloc\mutex.c" />
+    <ClCompile Include="jemalloc\mutex_pool.c" />
     <ClCompile Include="jemalloc\nstime.c" />
     <ClCompile Include="jemalloc\pages.c" />
     <ClCompile Include="jemalloc\prng.c" />
     <ClCompile Include="jemalloc\prof.c" />
-    <ClCompile Include="jemalloc\quarantine.c" />
     <ClCompile Include="jemalloc\rtree.c" />
-    <ClCompile Include="jemalloc\spin.c" />
     <ClCompile Include="jemalloc\stats.c" />
+    <ClCompile Include="jemalloc\sz.c" />
     <ClCompile Include="jemalloc\tcache.c" />
     <ClCompile Include="jemalloc\ticker.c" />
     <ClCompile Include="jemalloc\tsd.c" />
-    <ClCompile Include="jemalloc\util.c" />
     <ClCompile Include="jemalloc\witness.c" />
+    <ClCompile Include="MaskedOcclusionCulling\CullingThreadpool.cpp" />
+    <ClCompile Include="MaskedOcclusionCulling\MaskedOcclusionCulling.cpp" />
+    <ClCompile Include="MaskedOcclusionCulling\MaskedOcclusionCullingAVX2.cpp">
+      <EnableEnhancedInstructionSet Condition="'$(Configuration)|$(Platform)'=='Release|x64'">AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
+    </ClCompile>
+    <ClCompile Include="MaskedOcclusionCulling\MaskedOcclusionCullingAVX512.cpp" />
     <ClCompile Include="src\ansel.cpp" />
     <ClCompile Include="src\patches\achievements.cpp" />
+    <ClCompile Include="src\patches\fileio.cpp" />
     <ClCompile Include="src\patches\patches.cpp" />
     <ClCompile Include="src\patches\rendering\codegen.cpp" />
     <ClCompile Include="src\patches\rendering\d3d11.cpp" />
@@ -269,11 +278,9 @@
     <ClCompile Include="src\patches\TES\BGSDistantTreeBlock.cpp" />
     <ClCompile Include="src\patches\TES\BSBatchRenderer.cpp" />
     <ClCompile Include="src\patches\TES\BSGraphicsRenderer.cpp" />
-    <ClCompile Include="src\patches\TES\BSShader\BSPixelShader.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSShaderProperty.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSShaderUtil.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSShader_Dumper.cpp" />
-    <ClCompile Include="src\patches\TES\BSShader\BSVertexShader.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\Shaders\BSBloodSplatterShader.cpp" />
     <ClCompile Include="src\patches\TES\BSGraphicsRenderTargetManager.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSShader.cpp" />
@@ -320,6 +327,8 @@
     <ClCompile Include="zydis\src\Zydis.c" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="MaskedOcclusionCulling\CompilerSpecific.inl" />
+    <None Include="MaskedOcclusionCulling\MaskedOcclusionCullingCommon.inl" />
     <None Include="My Amplifier Results - skyrim64_test\My Amplifier Results - skyrim64_test.amplxeproj" />
     <None Include="src\patches\rendering\d3d11_codegen_tables.inl" />
     <None Include="src\patches\rendering\d3d11_tls_patchlist.inl" />
