--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -296,6 +296,7 @@
     <ClCompile Include="src\patches\TES\BSThread_Win32.cpp" />
     <ClCompile Include="src\patches\TES\MTRenderer.cpp" />
     <ClCompile Include="src\patches\TES\NiMain\NiMain.cpp" />
+    <ClCompile Include="src\patches\TES\Setting.cpp" />
     <ClCompile Include="src\profiler.cpp" />
     <ClCompile Include="src\typeinfo\hk_typeinfo.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
