--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="src\patches\TES\NiMain\NiObjectNET.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiPoint.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiRefObject.h" />
+    <ClInclude Include="src\patches\TES\NiMain\NiRTTI.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiSkinInstance.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiSourceTexture.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiTexture.h" />
@@ -301,6 +302,7 @@
     <ClCompile Include="src\patches\TES\MOC.cpp" />
     <ClCompile Include="src\patches\TES\MTRenderer.cpp" />
     <ClCompile Include="src\patches\TES\NiMain\NiMain.cpp" />
+    <ClCompile Include="src\patches\TES\NiMain\NiRTTI.cpp" />
     <ClCompile Include="src\patches\TES\Setting.cpp" />
     <ClCompile Include="src\profiler.cpp" />
     <ClCompile Include="src\typeinfo\hk_typeinfo.cpp" />
@@ -342,6 +344,7 @@
     <None Include="src\patches\rendering\d3d11_tls_xreflist.inl" />
     <None Include="src\patches\TES\BSShader\BSShaderConstants.inl" />
     <None Include="src\patches\TES\BSShader\BSShaderManagerInfo.inl" />
+    <None Include="src\patches\TES\NiMain\NiRTTI.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
