--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -147,9 +147,10 @@
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSSkyShader.h" />
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSSkyShaderProperty.h" />
     <ClInclude Include="src\patches\TES\BSTList.h" />
+    <ClInclude Include="src\patches\TES\BSTLocklessQueue.h" />
     <ClInclude Include="src\patches\TES\MOC.h" />
     <ClInclude Include="src\patches\TES\MTRenderer.h" />
-    <ClInclude Include="src\patches\TES\NiMain\BSCullingProcess.h" />
+    <ClInclude Include="src\patches\TES\BSCullingProcess.h" />
     <ClInclude Include="src\patches\TES\NiMain\BSDynamicTriShape.h" />
     <ClInclude Include="src\patches\TES\NiMain\BSGeometry.h" />
     <ClInclude Include="src\patches\rendering\codegen.h" />
