Imgui viewports minimally working ingame

--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="src\patches\TES\BSReadWriteLock.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\patches\TES\TESForm.h" />
+    <ClInclude Include="src\ui\imgui_impl_win32.h" />
     <ClInclude Include="src\ui\ui.h" />
     <ClInclude Include="src\ui\ui_renderer.h" />
     <ClInclude Include="src\vfs\vfs.h" />
@@ -320,6 +321,7 @@
     <ClCompile Include="src\patches\settings.cpp" />
     <ClCompile Include="src\patches\TES\TESForm.cpp" />
     <ClCompile Include="src\patches\threading.cpp" />
+    <ClCompile Include="src\ui\imgui_impl_win32.cpp" />
     <ClCompile Include="src\ui\ui.cpp" />
     <ClCompile Include="src\ui\ui_renderer.cpp" />
     <ClCompile Include="src\vfs\vfs.cpp" />
