--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClInclude Include="MaskedOcclusionCulling\CullingThreadpool.h" />
     <ClInclude Include="MaskedOcclusionCulling\MaskedOcclusionCulling.h" />
+    <ClInclude Include="src\config.h" />
     <ClInclude Include="src\patches\rendering\d3d11_proxy.h" />
     <ClInclude Include="src\patches\rendering\GpuCircularBuffer.h" />
     <ClInclude Include="src\patches\rendering\GpuTimer.h" />
