--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="src\patches\rendering\GpuTimer.h" />
     <ClInclude Include="src\patches\TES\BGSDistantTreeBlock.h" />
     <ClInclude Include="src\patches\TES\BSGraphicsTypes.h" />
+    <ClInclude Include="src\patches\TES\BSJobs.h" />
     <ClInclude Include="src\patches\TES\BSRenderPass.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSLight.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSShader_Dumper.h" />
@@ -289,6 +290,7 @@
     <ClCompile Include="src\patches\TES\BGSDistantTreeBlock.cpp" />
     <ClCompile Include="src\patches\TES\BSBatchRenderer.cpp" />
     <ClCompile Include="src\patches\TES\BSGraphicsRenderer.cpp" />
+    <ClCompile Include="src\patches\TES\BSJobs.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSShaderProperty.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSShaderUtil.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSShader_Dumper.cpp" />
