Actually enable tracy to be used

--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -223,6 +223,7 @@
     <ClInclude Include="src\ui\imgui_impl_win32.h" />
     <ClInclude Include="src\ui\ui.h" />
     <ClInclude Include="src\ui\ui_renderer.h" />
+    <ClInclude Include="src\ui\ui_tracy.h" />
     <ClInclude Include="src\vfs\vfs.h" />
     <ClInclude Include="src\vfs\vfs_hook.h" />
     <ClInclude Include="src\vfs\vfs_util.h" />
@@ -328,6 +329,7 @@
     <ClCompile Include="src\ui\imgui_impl_win32.cpp" />
     <ClCompile Include="src\ui\ui.cpp" />
     <ClCompile Include="src\ui\ui_renderer.cpp" />
+    <ClCompile Include="src\ui\ui_tracy.cpp" />
     <ClCompile Include="src\vfs\vfs.cpp" />
     <ClCompile Include="src\vfs\vfs_hook.cpp" />
     <ClCompile Include="src\vfs\vfs_util.cpp" />
