--- a/tracy_lib/tracy_lib.vcxproj
+++ b/tracy_lib/tracy_lib.vcxproj
@@ -38,19 +38,27 @@
     <ClInclude Include="tracy\common\TracySystem.hpp" />
     <ClInclude Include="tracy\common\tracy_benaphore.h" />
     <ClInclude Include="tracy\common\tracy_lz4.hpp" />
+    <ClInclude Include="tracy\common\tracy_lz4hc.hpp" />
     <ClInclude Include="tracy\common\tracy_sema.h" />
+    <ClInclude Include="tracy\imguicolortextedit\texteditor.h" />
+    <ClInclude Include="tracy\server\IconsFontAwesome5.h" />
     <ClInclude Include="tracy\server\TracyBadVersion.hpp" />
+    <ClInclude Include="tracy\server\TracyBuzzAnim.hpp" />
     <ClInclude Include="tracy\server\TracyCharUtil.hpp" />
+    <ClInclude Include="tracy\server\TracyDecayValue.hpp" />
     <ClInclude Include="tracy\server\TracyEvent.hpp" />
     <ClInclude Include="tracy\server\TracyFileHeader.hpp" />
     <ClInclude Include="tracy\server\TracyFileRead.hpp" />
+    <ClInclude Include="tracy\server\TracyFilesystem.hpp" />
     <ClInclude Include="tracy\server\TracyFileWrite.hpp" />
     <ClInclude Include="tracy\server\TracyImGui.hpp" />
     <ClInclude Include="tracy\server\TracyMemory.hpp" />
     <ClInclude Include="tracy\server\TracyPopcnt.hpp" />
     <ClInclude Include="tracy\server\TracySlab.hpp" />
+    <ClInclude Include="tracy\server\TracyStringDiscovery.hpp" />
     <ClInclude Include="tracy\server\TracyVarArray.hpp" />
     <ClInclude Include="tracy\server\TracyVector.hpp" />
+    <ClInclude Include="tracy\server\TracyVersion.hpp" />
     <ClInclude Include="tracy\server\TracyView.hpp" />
     <ClInclude Include="tracy\server\TracyWorker.hpp" />
     <ClInclude Include="tracy\server\tracy_flat_hash_map.hpp" />
@@ -64,6 +72,8 @@
     <ClCompile Include="tracy\common\TracySocket.cpp" />
     <ClCompile Include="tracy\common\TracySystem.cpp" />
     <ClCompile Include="tracy\common\tracy_lz4.cpp" />
+    <ClCompile Include="tracy\common\tracy_lz4hc.cpp" />
+    <ClCompile Include="tracy\imguicolortextedit\TextEditor.cpp" />
     <ClCompile Include="tracy\server\TracyBadVersion.cpp" />
     <ClCompile Include="tracy\server\TracyMemory.cpp" />
     <ClCompile Include="tracy\server\TracyView.cpp" />
