CreationKit: Allow building a separate override dll (d3d9.dll)

--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -284,19 +284,20 @@
     <ClCompile Include="meshoptimizer\src\vertexcodec.cpp" />
     <ClCompile Include="meshoptimizer\src\vfetchanalyzer.cpp" />
     <ClCompile Include="meshoptimizer\src\vfetchoptimizer.cpp" />
+    <ClCompile Include="src\d3d9.cpp" />
     <ClCompile Include="src\patches\achievements.cpp" />
     <ClCompile Include="src\patches\fileio.cpp" />
     <ClCompile Include="src\patches\patches.cpp" />
     <ClCompile Include="src\patches\rendering\codegen.cpp" />
     <ClCompile Include="src\patches\rendering\d3d11.cpp" />
     <ClCompile Include="src\d3dx9_debug.cpp" />
-    <ClCompile Include="src\patches\rendering\d3d11_dc.cpp" />
     <ClCompile Include="src\patches\dinput8.cpp" />
     <ClCompile Include="src\dllmain.cpp" />
     <ClCompile Include="src\d3dx9_release.cpp" />
     <ClCompile Include="src\dump.cpp" />
     <ClCompile Include="src\patches\experimental.cpp" />
     <ClCompile Include="src\patches\logging.cpp" />
+    <ClCompile Include="src\patches\rendering\d3d11_dc.cpp" />
     <ClCompile Include="src\patches\rendering\d3d11_proxy.cpp" />
     <ClCompile Include="src\patches\rendering\d3d11_tls.cpp" />
     <ClCompile Include="src\patches\rendering\GpuCircularBuffer.cpp" />
