--- a/skyrim64_test/skyrim64_test.vcxproj.filters
+++ b/skyrim64_test/skyrim64_test.vcxproj.filters
@@ -44,9 +44,6 @@
     <ClInclude Include="src\dump.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\typeinfo\hk_typeinfo.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\patches\dinput8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -335,6 +332,9 @@
     <ClInclude Include="src\patches\TES\BSTaskManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\typeinfo\hkreflection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui\imgui.cpp">
@@ -357,9 +357,6 @@
     </ClCompile>
     <ClCompile Include="src\dump.cpp">
       <Filter>Source Files\patches</Filter>
-    </ClCompile>
-    <ClCompile Include="src\typeinfo\hk_typeinfo.cpp">
-      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\patches\settings.cpp">
       <Filter>Source Files\patches</Filter>
@@ -704,6 +701,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\patches\rendering\d3d11_dc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\typeinfo\hkreflection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
