Code for auto-labelling some nirtti vtables

--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -209,14 +209,14 @@
     <ClInclude Include="src\patches\dinput8.h" />
     <ClInclude Include="src\dump.h" />
     <ClInclude Include="src\profiler.h" />
-    <ClInclude Include="src\typeinfo\hkreflection.h" />
+    <ClInclude Include="src\typeinfo\hk_rtti.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_internal.h" />
     <ClInclude Include="imgui\stb_rect_pack.h" />
     <ClInclude Include="imgui\stb_textedit.h" />
     <ClInclude Include="imgui\stb_truetype.h" />
-    <ClInclude Include="src\typeinfo\msrtti.h" />
+    <ClInclude Include="src\typeinfo\ms_rtti.h" />
     <ClInclude Include="src\ui\imgui_ext.h" />
     <ClInclude Include="src\ui\imgui_impl_dx11.h" />
     <ClInclude Include="src\patches\TES\MemoryManager.h" />
@@ -331,10 +331,11 @@
     <ClCompile Include="src\patches\TES\NiMain\NiRTTI.cpp" />
     <ClCompile Include="src\patches\TES\Setting.cpp" />
     <ClCompile Include="src\profiler.cpp" />
-    <ClCompile Include="src\typeinfo\hkreflection.cpp" />
+    <ClCompile Include="src\typeinfo\hk_rtti.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="src\typeinfo\ni_rtti.cpp" />
     <ClCompile Include="src\ui\imgui_ext.cpp" />
     <ClCompile Include="src\ui\imgui_impl_dx11.cpp" />
     <ClCompile Include="src\patches\TES\MemoryManager.cpp" />
@@ -350,7 +351,7 @@
     <ClCompile Include="src\vfs\vfs_hook.cpp" />
     <ClCompile Include="src\vfs\vfs_util.cpp" />
     <ClCompile Include="src\xutil.cpp" />
-    <ClCompile Include="src\typeinfo\msrtti.cpp" />
+    <ClCompile Include="src\typeinfo\ms_rtti.cpp" />
     <ClCompile Include="src\patches\window.cpp" />
     <ClCompile Include="zydis\src\Decoder.c" />
     <ClCompile Include="zydis\src\DecoderData.c" />
